# ROBERT_TORRES_MICRO_2026_C2

./: README.md
TAREA_4/: CMakeLists.txt  README.md
TAREA_4/hardware/: LICENSE
TAREA_4/hardware/KAKATA_RC433_V1/: KAKATA_RC433_V1.kicad_pro  RF433MHZ.kicad_sym
TAREA_4/hardware/KAKATA_RC433_V1/gerber/: KAKATA_RC433_V1-B_Paste.gbr  KAKATA_RC433_V1-B_Silkscreen.gbr  KAKATA_RC433_V1-Edge_Cuts.gbr  KAKATA_RC433_V1-F_Cu.gbr  KAKATA_RC433_V1-F_Paste.gbr  KAKATA_RC433_V1-F_Silkscreen.gbr  (+3 more)
TAREA_4/main/: CMakeLists.txt  control_input.c  control_input.h  control_packet.c  control_packet.h  main.c  pin_config.h  rf433.c
TAREA_5/: .gitignore  AGENTS.md  CMakeLists.txt  README.md
TAREA_5/hardware/: README.md
TAREA_5/hardware/KAKATA_RC433_V1/: BOTONES_LATERALES.kicad_sch  CONTROL DXF RC.DXF  KAKATA_RC433_V1.kicad_pcb  KAKATA_RC433_V1.kicad_sch  untitled.kicad_sch
TAREA_5/main/: CMakeLists.txt  app_config.h  calibration.c  calibration.h  control_input.c  control_input.h  control_packet.c  control_packet.h  display.c  display.h  imu_mpu6050.c  imu_mpu6050.h  main.c  mqtt_manager.c  mqtt_manager.h  pin_config.h  rf433.c  rf433.h  secrets.example.h  wifi_manager.c  wifi_manager.h
Ultima ESP/: Ultima ESP.kicad_pcb  Ultima ESP.kicad_prl  Ultima ESP.kicad_pro  Ultima ESP.kicad_sch  Ultima ESP.kicad_sch-bak  _autosave-Ultima ESP.kicad_pro  freerouting.dsn  ~_autosave-Ultima ESP.kicad_sch.lck
tarea mqtt/: CMakeLists.txt  LICENSE
tarea mqtt/Ultima ESP/: Ultima ESP.kicad_pcb  Ultima ESP.kicad_sch  _autosave-Ultima ESP.kicad_prl  freerouting.dsn
tarea mqtt/main/: app_main.c
(+6 files in other folders)
